--- a/assets/scss/_variables.op-architecture.scss
+++ b/assets/scss/_variables.op-architecture.scss
@@ -9,7 +9,7 @@
 $g-color-main: #7d7d8f;
 
 // Primary Color
-$g-color-primary: #c94645;
+$g-color-primary: #4682B4;
 
 // Custom Color
 $g-theme-color-gray-light-v1: #b5b5b5;
