--- a/layouts/partials/careers.html
+++ b/layouts/partials/careers.html
@@ -1,6 +1,6 @@
 {{ partial "global-header.html" . }}
 
-{{ if .Site.Data.services.enable }}
+{{ if .Site.Data.careers.enable }}
 <!-- Service Start -->
 <section id="service">
   <div class="container">
@@ -8,14 +8,14 @@
     <!-- Intro -->
     <div class="row">
       <div class="section-title">
-        <h2>{{ .Site.Data.services.title }}</h2>
-        <p>{{ .Site.Data.services.subtitle }}</p>
+        <h2>{{ .Site.Data.careers.title }}</h2>
+        <p>{{ .Site.Data.careers.subtitle }}</p>
       </div>
     </div>
 
     <!-- Content -->
     <div class="row">
-      {{ range .Site.Data.services.content }}
+      {{ range .Site.Data.careers.content }}
       <div class="col-sm-6 col-md-4">
         <div class="service-item">
           <i class="{{ .icon }}"></i>
