--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,9 +8,9 @@
 @import "../../node_modules/venobox/venobox/venobox";
 @import "../../node_modules/owl-carousel/owl-carousel/owl.carousel";
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
-@import url(http://fonts.googleapis.com/css?family=Volkhov:400italic);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
+@import url(https://fonts.googleapis.com/css?family=Volkhov:400italic);
 @import url(https://fonts.googleapis.com/css?family=Pathway+Gothic+One);
 /*
  * This css file includes styles added in the jekyll port of this theme.
