--- a/layouts/partials/careers.html
+++ b/layouts/partials/careers.html
@@ -3,28 +3,41 @@
 {{ if .Site.Data.careers.enable }}
 <!-- Service Start -->
 <section id="service">
-  <div class="container">
 
-    <!-- Intro -->
+  <!-- Intro -->
+  <div class="container">
     <div class="row">
       <div class="section-title">
         <h2>{{ .Site.Data.careers.title }}</h2>
         <p>{{ .Site.Data.careers.subtitle }}</p>
       </div>
     </div>
+  </div>
 
     <!-- Content -->
-    <div class="row">
-      {{ range .Site.Data.careers.content }}
-      <div class="col-sm-6 col-md-4">
-        <div class="service-item">
-          <i class="{{ .icon }}"></i>
+    <div class="row justify-content-center">
+      {{ range .Site.Data.careers.profiles }}
+      <div class="col-sm-6 col-md-6">
+        <div class="ml-5 mr-5">
+        <div class="service-item text-left">
           <h4>{{ .name }}</h4>
-          <p>{{ .text }}</p>
+          <p>{{ .text | markdownify }}</p>
+        </div>
         </div>
       </div>
       {{ end }}
     </div>
+
+    <div class="container">
+    <div class="row">
+      <div class="section-title col-md-12">
+        <p>If you're interested, either give us a call or drop us an email. We'll get in touch with you shortly.</p>
+        <a class="btn btn-primary mt-lg-5" href="/contact">Apply now</a>
+      </div>
+    </div>
   </div>
+
+
+
 </section>
 {{ end }}
