--- a/layouts/partials/slider.html
+++ b/layouts/partials/slider.html
@@ -11,7 +11,7 @@
             <div class="col-12 text-center">
                     <p class="animated fadeInUp text-uppercase">{{ .Site.Params.slider.subtitle | safeHTML }}</p>
                     <h1 class="display-2 animated fadeInUp text-uppercase">{{ .Site.Params.slider.title | safeHTML }}</h1>
-                    <a class="btn btn-main btn-solid-border mt-lg-5" href="{{ .Site.Params.slider.url | absURL }}" >{{ .Site.Params.slider.btnText }}</a>
+                    <a class="btn btn-main btn-solid-border mt-lg-5" href="#intro" >{{ .Site.Params.slider.btnText }}</a>
             </div>
         </div>
     </div>
