--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,6 @@
 @import "_variables.scss";
 
+@import "../../node_modules/normalize.css/normalize";
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../../node_modules/animate.css/animate";
 @import "../../node_modules/github-syntax-light/lib/github-light";
@@ -18,10 +19,10 @@
  *
  */
 
-* {
-  margin: 0;
-  padding: 0;
-}
+//* {
+//  margin: 0;
+//  padding: 0;
+//}
 
 body {
 }
@@ -743,6 +744,10 @@ font header .navbar-default .navbar-nav li a:hover {
   -webkit-transition: .5s all;
   -o-transition: .5s all;
   transition: .5s all;
+}
+
+ul#portfolio-content-active {
+        padding: 0px;
 }
 
 #portfolio-work .block .mix {
