--- a/layouts/partials/careers.html
+++ b/layouts/partials/careers.html
@@ -6,8 +6,8 @@
 
   <!-- Intro -->
   <div class="container">
-    <div class="row">
-      <div class="section-title">
+    <div class="row justify-content-center">
+      <div class="section-title col-md-8">
         <h2>{{ .Site.Data.careers.title }}</h2>
         <p>{{ .Site.Data.careers.subtitle }}</p>
       </div>
