Small mobile fixes

--- a/layouts/partials/careers.html
+++ b/layouts/partials/careers.html
@@ -17,7 +17,7 @@
     <!-- Content -->
     <div class="row justify-content-center">
       {{ range .Site.Data.careers.profiles }}
-      <div class="col-sm-6 col-md-6">
+      <div class="col-md-6">
         <div class="ml-5 mr-5">
         <div class="service-item text-left">
           <h4>{{ .name }}</h4>
