--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,8 +2,8 @@
   <div class="container">
      <a class="navbar-brand" href="{{ .Site.BaseURL }}"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon">
-        <i class="fas fa-bars"></i>
+    <span class="toggler">
+        <i class="fa fa-bars"></i>
     </span>
   </button>
   <div class="collapse navbar-collapse justify-content-md-end" id="navbarCollapse">
