--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1454,6 +1454,11 @@ px      68    160    252    344    436    */
     left: 0;
     overflow: hidden;
     z-index: -100;
+    background-image: url("/img/clouds.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-blend-mode: darken;
 }
 
 .fullscreen-bg__video {
