--- a/layouts/partials/slider.html
+++ b/layouts/partials/slider.html
@@ -2,7 +2,7 @@
 {{ "<!-- Slider Start -->" | safeHTML}}
 <section id="slider" class="masthead">
     <div class="fullscreen-bg">
-    <video loop muted autoplay poster="img/clouds.jpg" class="fullscreen-bg__video">
+    <video loop muted autoplay poster="/img/clouds.jpg" class="fullscreen-bg__video">
         <source src="/videos/clouds.mp4" type="video/mp4">
     </video>
     </div>
