Fixed video on Android (hopefully)

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -248,7 +248,7 @@ font header .navbar-default .navbar-nav li a:hover {
   background-position: center;
   background-repeat: no-repeat;
   background-blend-mode: darken;
-  z-index: -101
+  z-index: -10;
 }
 
 #slider {
