--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -249,29 +249,6 @@ font header .navbar-default .navbar-nav li a:hover {
   position: relative;
   display: flex;
   align-items: center;
-  background-image: url("/img/clouds.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-blend-mode: darken;
-  z-index: -10;
-}
-
-.slider {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(45, 45, 55, 0.8) !important;
-  opacity: 0.8;
-}
-
-#slider .block {
-  color: #E3E3E4;
 }
 
 #slider .block h1 {
@@ -1455,6 +1432,11 @@ px      68    160    252    344    436    */
     left: 0;
     overflow: hidden;
     z-index: -100;
+    background-image: url("/img/clouds.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-blend-mode: darken;
 }
 
 .fullscreen-bg__video {
@@ -1482,11 +1464,13 @@ px      68    160    252    344    436    */
 
 @media (max-width: 767px) {
   .fullscreen-bg {
-    background-image: url("/img/clouds.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-blend-mode: darken;
+    //background-image: url("/img/clouds.jpg");
+    //background-size: cover;
+    //background-position: center;
+    //background-repeat: no-repeat;
+    //background-blend-mode: darken;
+    //filter: blur(8px);
+    //-webkit-filter: blur(8px);
   }
 
   .fullscreen-bg__video {
