--- a/layouts/partials/wrapper.html
+++ b/layouts/partials/wrapper.html
@@ -2,7 +2,7 @@
 <section id="intro">
   <div class="container">
     <div class="row">
-      <div class="col-md-7 col-sm-12">
+      <div class="col-md-6 col-sm-12">
         <div class="block">
           <div class="section-title">
             <h2>{{ .Site.Params.wrapper.title }}</h2>
@@ -14,7 +14,7 @@
       {{ end }}
         </div>
       </div><!-- .col-md-7 close -->
-      <div class="col-md-5 col-sm-12">
+      <div class="col-md-6 col-sm-12 d-none d-sm-block">
         <div class="block">
          <img src="{{ with .Site.Params.wrapper.image }} {{ . | absURL }} {{ end }}" alt="Img">
         </div>
