--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -144,14 +144,17 @@ header {
   padding: 20px 0;
 }
 
+
 .navbar {
   font-family: 'Pathway Gothic One', sans-serif;
   letter-spacing: 0.15em;
+  transition: background-color 300ms linear;
 }
 
 .navbar-brand {
   display: block;
-  background-image: url("/img/logo_icon_white.png");
+  background-image: url("/img/logo_white.svg");
+  background-size: 50px;
   background-position: center;
   background-repeat: no-repeat;
   min-width: 60px;
@@ -160,7 +163,9 @@ header {
 
 .navbar-brand.scrolled {
   display: block;
-  background-image: url("/img/logo_icon.png");
+  background-image: url("/img/logo.svg");
+  background-size: 50px;
+
   background-position: center;
   background-repeat: no-repeat;
   min-width: 60px;
@@ -176,7 +181,7 @@ header {
 
 .navbar.scrolled {
   background-color: $white;
-  transition: background-color 200ms linear;
+  transition: background-color 300ms linear;
   color: #000;
   border-bottom: solid $color-gray-dark-v3;
 }
@@ -1438,6 +1443,15 @@ px      68    160    252    344    436    */
   .fullscreen-bg__video {
     display: none;
   }
+}
+
+.dark-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(70, 130, 180, 0.4);
 }
 
 #clients-logo .owl-wrapper {
