--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,7 @@
             {{ end }}
           </ul>
         </div>
-        <p>Copyright &copy; Skyworkz. All rights reserved.</p>
+        <p>Copyright &copy; 2019 Skyworkz. All rights reserved.</p>
       </div>
     </div>
   </div>
