--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-md fixed-top pt-2 pb-2">
   <div class="container">
-     <a class="navbar-brand" href="{{ .Site.BaseURL }}"></a>
+          <a class="navbar-brand" href="{{ .Site.BaseURL }}"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="toggler">
+    <span class="">
         <i class="fa fa-bars"></i>
     </span>
   </button>
