--- a/layouts/partials/slider.html
+++ b/layouts/partials/slider.html
@@ -6,6 +6,7 @@
        <source src="/videos/clouds.mp4" type="video/mp4">
       </video>
     </div>
+    <div class="dark-overlay"></div>
     <div class="container h-100 welcome">
         <div class="row h-100 align-items-center text-light">
             <div class="col-12 text-center">
