--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -192,6 +192,28 @@ header {
         color: #000;
 }
 
+.navbar-nav > li {
+  float: left;
+  position: relative;
+}
+.navbar .navbar-nav .active a::after {
+  border-bottom: 2px solid $white;
+  bottom: -1px;
+  content: " ";
+  left: 0;
+  position: absolute;
+  right: 0;
+  margin: 0px 7px;
+}
+.navbar-light .navbar-nav .active a::after {
+  border-bottom: 2px solid $primary;
+  bottom: -1px;
+  content: " ";
+  left: 0;
+  position: absolute;
+  right: 0;
+  margin: 0px 7px;
+}
 
 
 header .navbar-nav {
