--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,11 +9,11 @@
   <div class="collapse navbar-collapse justify-content-md-end" id="navbarCollapse">
     <ul class="navbar-nav text-uppercase">
 
-                <li class="nav-item"><a class="nav-link h5" href="{{ .Site.BaseURL }}">{{ .Site.Params.home }}</a></li>
                 {{ $currentPage := . }}
                 {{ range .Site.Menus.header }}
                 <li class="nav-item {{ if eq $currentPage.RelPermalink (print .URL "/") }}active{{ end }}">
-                <a class="nav-link h5" href="{{ .URL }}/">{{ .Name }}</a></li>
+                        <a class="nav-link h5" href="{{ .URL }}/">{{ .Name }}</a>
+                </li>
                 {{ end }}
     </ul>
     </div>
