Fixed padding and margins

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -24,6 +24,6 @@
 {{ $carousel := resources.Get "js/owl.carousel.js" }}
 {{ $venobox := resources.Get "js/venobox.js" }}
 
-{{ $defaultJS := slice $jquery $bootstrap $carousel $venobox $plugins $main | resources.Concat "js/global.js" }}
+{{ $defaultJS := slice $jquery $bootstrap $carousel $venobox $plugins $main | resources.Concat "js/global.js" | resources.Minify | resources.Fingerprint }}
 <script src="{{ $defaultJS.Permalink }}"></script>
 
