--- a/layouts/partials/slider.html
+++ b/layouts/partials/slider.html
@@ -10,9 +10,9 @@
     <div class="container h-100 welcome">
         <div class="row h-100 align-items-center text-light">
             <div class="col-12 text-center">
-                    <p class="animated fadeInUp text-uppercase">{{ .Site.Params.slider.subtitle | safeHTML }}</p>
+                    <p class="animated fadeInUp text-uppercase mb-0">{{ .Site.Params.slider.subtitle | safeHTML }}</p>
                     <h1 class="display-2 animated fadeInUp text-uppercase">{{ .Site.Params.slider.title | safeHTML }}</h1>
-                    <a class="btn btn-main btn-solid-border mt-lg-5" href="#intro" >{{ .Site.Params.slider.btnText }}</a>
+                    <a class="btn btn-main btn-solid-border mt-5" href="#intro" >{{ .Site.Params.slider.btnText }}</a>
             </div>
         </div>
     </div>
