Some fixes to improve speed. Uses uncss to remove unneeded css.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -25,5 +25,5 @@
 {{ $venobox := resources.Get "js/venobox.js" }}
 
 {{ $defaultJS := slice $jquery $bootstrap $carousel $venobox $plugins $main | resources.Concat "js/global.js" | resources.Minify | resources.Fingerprint }}
-<script src="{{ $defaultJS.Permalink }}"></script>
 
+<script>{{ $defaultJS.Content | safeJS }}</script>
