--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -6,9 +6,9 @@
     <div class="container">
 
     <!-- Intro -->
-    <div class="row">
-      <div class="section-title text-center col-md-12">
-        <h2>{{ .Site.Data.team.title }}</h2>
+    <div class="row justify-content-center">
+      <div class="section-title text-center col-md-8 mx-3">
+        <h2 class="mb-3">{{ .Site.Data.team.title }}</h2>
         <p>{{ .Site.Data.team.subtitle }}</p>
       </div>
     </div>
