--- a/layouts/partials/careers.html
+++ b/layouts/partials/careers.html
@@ -7,8 +7,8 @@
   <!-- Intro -->
   <div class="container">
     <div class="row justify-content-center">
-      <div class="section-title col-md-8">
-        <h2>{{ .Site.Data.careers.title }}</h2>
+      <div class="section-title col-md-8 mx-3">
+        <h2 class="mb-3">{{ .Site.Data.careers.title }}</h2>
         <p>{{ .Site.Data.careers.subtitle }}</p>
       </div>
     </div>
