--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -8,15 +8,15 @@
     <!-- Intro -->
     <div class="row">
       <div class="section-title mx-3">
-        <h2 class="mb-2">{{ .Site.Data.services.title }}</h2>
+        <h2 class="mb-3">{{ .Site.Data.services.title }}</h2>
         <p>{{ .Site.Data.services.subtitle }}</p>
       </div>
     </div>
 
     <!-- Content -->
-    <div class="row">
+    <div class="row justify-content-center mx-2">
       {{ range .Site.Data.services.content }}
-      <div class="col-sm-6 col-md-4 mx-2">
+      <div class="col-sm-6 col-md-4 px-3">
         <div class="service-item">
           <i class="{{ .icon }}"></i>
           <h4>{{ .name }}</h4>
