Load Pathway first

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,6 +9,8 @@
 @import "../../node_modules/venobox/venobox/venobox";
 @import "../../node_modules/owl-carousel/owl-carousel/owl.carousel";
 
+@import url('https://fonts.googleapis.com/css?family=Pathway+Gothic+One&display=swap');
+
 /*
  * This css file includes styles added in the jekyll port of this theme.
  * To find the original style.css that ships with Airspace, read airspace.css
