--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,7 +2,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta name="description" content="{{ $.Param "description" | default .Site.Params.description }}">
-  <link rel="canonical" href="{{ .Permalink }}">
+{{ if .Params.canonicalUrl }}
+<link rel="canonical" href="{{ .Params.canonicalUrl }}">
+{{ else }}
+<link rel="canonical" href="{{ .Permalink }}">
+{{ end }}
   {{ partial "favicon.html" . }}
 
 {{ if .IsHome -}}
