--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,7 +7,8 @@
 {{ else }}
 <link rel="canonical" href="{{ .Permalink }}">
 {{ end }}
-  {{ partial "favicon.html" . }}
+{{ partial "favicon.html" . }}
+{{ partial "seo_schema" . }}
 
 {{ if .IsHome -}}
   <title>{{ .Site.Title }}</title>
