--- a/layouts/partials/slider.html
+++ b/layouts/partials/slider.html
@@ -2,7 +2,7 @@
 {{ "<!-- Slider Start -->" | safeHTML}}
 <section id="slider" class="masthead">
     <div class="fullscreen-bg">
-      <video loop muted autoplay playsinline poster="/img/clouds.jpg" class="fullscreen-bg__video">
+      <video preload="auto" loop muted autoplay playsinline poster="/img/clouds.jpg" class="fullscreen-bg__video">
        <source src="/videos/clouds.webm" type="video/webm">
        <source src="/videos/clouds.mp4" type="video/mp4">
       </video>
