--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,4 +1,5 @@
 @import "_variables.scss";
+@import "syntax";
 
 @import "../../node_modules/normalize.css/normalize";
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
