--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,22 +7,32 @@
 
 	{{ partial "header.html" . }}
 
+	{{ partial "global-header.html" . }}
+
 	<div class="post">
 	  <!-- Wrapper Start -->
 	  <section class="section" style="border: 1px dotted #ddd;">
 	    <div class="container">
 	      <div class="row">
-	        <div>
-	          <div class="block">
-							{{ with .Params.image }}<img src="{{ . | absURL }}" width="100%" alt="post-image"> {{ end }}
+          <div class="col-md-12">
 	            <h1>{{ .Params.title }}</h1>
 	            <div class="post-info-wrapper">
 	              <p class="italic">By <span class="bold">{{ .Params.author }}</span> on <span class="bold">{{ .Site.Params.dateFormat | default "Jan 2, 2006" | .Date.Format }}</span></p>
 	            </div>
+              </div>
+        </div>
 	            <hr />
+	      <div class="row">
+            {{ if isset .Params "image" }}
+	          <div class="col-md-12">
+              {{ with .Params.image }}<div class="float-right m-5 w-25" ><img src="{{ . | absURL }}" class="img-fluid" alt="post-image"></div>{{ end }}
+	            <p>{{ .Content }}</p>
+            </div>
+            {{ else }}
+	          <div class="col-md-12">
 	            <p>{{ .Content }}</p>
 	          </div>
-	        </div><!-- .col-md-7 close -->
+            {{ end }}
 	      </div>
 	    </div>
 	  </section>
