--- a/layouts/partials/seo_schema.html
+++ b/layouts/partials/seo_schema.html
@@ -21,6 +21,6 @@
     "dateModified": {{ .Date }},
     "url" : {{ .Permalink }},
     "wordCount" : {{ .WordCount }},
-    "keywords" : [ {{ if isset .Params "tags" }}{{ range .Params.tags }}{{ . }},{{ end }}{{ end }}Skyworkz, Cloud, DevOps, Kubernetes, Consulting, Developers, Engineers" ]
+    "keywords" : "[ {{ if isset .Params "tags" }}{{ range .Params.tags }}{{ . }},{{ end }}{{ end }}Skyworkz, Cloud, DevOps, Kubernetes, Consulting, Developers, Engineers" ]"
 }
 </script>
