--- a/layouts/partials/seo_schema.html
+++ b/layouts/partials/seo_schema.html
@@ -20,7 +20,7 @@
     "datePublished": {{ .Date }},
     "dateModified": {{ .Date }},
     "url" : {{ .Permalink }},
-    "wordCount" : {{ .WordCount }},
-    "keywords" : "[ {{ if isset .Params "tags" }}{{ range .Params.tags }}{{ . }},{{ end }}{{ end }}Skyworkz, Cloud, DevOps, Kubernetes, Consulting, Developers, Engineers" ]"
+    "wordCount": {{ .WordCount }},
+    "keywords": '[ "{{ if isset .Params "tags" }}{{ range .Params.tags }}{{ . }},{{ end }}{{ end }}Skyworkz, Cloud, DevOps, Kubernetes, Consulting, Developers, Engineers" ]'
 }
 </script>
