--- a/themes/appton/layouts/partials/clients.html
+++ b/themes/appton/layouts/partials/clients.html
@@ -1,4 +1,4 @@
-    <section class="bg-diagonal">
+    <section class="bg-diagonal mt-5">
       <div class="container">
         <div class="text-center">
           <h2>Some of the companies we work with</h2>
