--- a/themes/appton/layouts/partials/header.html
+++ b/themes/appton/layouts/partials/header.html
@@ -16,7 +16,7 @@
                         <a class="nav-link {{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }}" href="{{ .URL }}">{{ .Name }}</a>
                 </li>
                 {{ end }}
-    </ul><a href="#" data-toggle="modal" data-target="#contact" class="btn btn-warning navbar-btn ml-0 ml-lg-3 rounded-pill text-uppercase">Contact</a>
+    </ul><a href="#" data-toggle="modal" data-target="#contact" class="btn btn-outline-primary navbar-btn ml-0 ml-lg-3 rounded-pill text-uppercase">Contact</a>
     </div>
   </div>
 </nav>
