--- a/themes/appton/layouts/partials/integrations.html
+++ b/themes/appton/layouts/partials/integrations.html
@@ -4,7 +4,7 @@
           <h2>Services</h2>
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <p class="lead text-muted mt-2">Take a look at what we can do for you. We offer consulting services, training and workshops.</p>
+              <p class="lead text-muted mt-2">We like to solve hard problems. Can you challenge us?</p>
             </div>
           </div>
         </div>
@@ -12,23 +12,23 @@
           <div class="row">
             <div class="col-lg-4">
               <div class="box text-center">
-                <div class="icon d-flex align-items-end"><img src="img/monitor.svg" alt="..." class="img-fluid"></div>
+                <div class="icon d-flex align-items-end"><img src="img/developer.svg" alt="..." class="img-fluid"></div>
                 <h3 class="h4">Cloud consultancy</h3>
-                <p class="font-weight-light">Lorem Ipsum has been the industry's standard dummy text ever.</p>
+                <p class="font-weight-light">Get one of our experts to help your organisation.</p>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="box text-center">
-                <div class="icon d-flex align-items-end"><img src="img/target.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Cloud development</h3>
-                <p class="font-weight-light">Lorem Ipsum has been the industry's standard dummy text ever.</p>
+                <div class="icon d-flex align-items-end"><img src="img/brainstorming.svg" alt="..." class="img-fluid"></div>
+                <h3 class="h4">Productized services</h3>
+                <p class="font-weight-light">Kickstart your Cloud journey with one of our productized services.</p>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="box text-center">
-                <div class="icon d-flex align-items-end"><img src="img/chat.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Workshops</h3>
-                <p class="font-weight-light">Lorem Ipsum has been the industry's standard dummy text ever.</p>
+                <div class="icon d-flex align-items-end"><img src="img/training.svg" alt="..." class="img-fluid"></div>
+                <h3 class="h4">Workshops and training</h3>
+                <p class="font-weight-light">Become a Cloud expert, Kubernetes wizard or a DevOps guru.</p>
               </div>
             </div>
           </div>
