--- a/themes/appton/layouts/partials/hero.html
+++ b/themes/appton/layouts/partials/hero.html
@@ -2,11 +2,11 @@
       <div><img src="/img/cloud-computing.svg" alt="..." class="hero-image img-fluid d-none d-lg-block position-absolute mt-5 mr-5" style="top: 100px; z-index: -1; right: 100px; width: 30%;"></div>
       <div class="container mb-5">
         <div class="row align-items-center">
-          <div class="col-lg-8">
-            <h1 class="hero-heading text-blue mb-0 display-4"><b>Focus</b> on business value</h1>
-            <h3>and let the <b>cloud</b> take care of your IT.</h3>
+          <div class="col-lg-9">
+            <h1 class="hero-heading mb-1 text-yellow text-bold">Focus on<br/>your business</h1>
+            <h2 class="ml-5 text-muted">and let the <b>cloud</b> take care of your IT.</h2>
             <div class="row">
-              <div class="col-lg-10">
+              <div class="col-lg-10 mt-5">
                 <p class="lead text-muted mt-4 mb-4">Things work differently in the Cloud. We help you making the right choices and deliver business value faster.</p>
               </div>
             </div>
