--- a/themes/appton/layouts/partials/how.html
+++ b/themes/appton/layouts/partials/how.html
@@ -1,16 +1,16 @@
 
     <section>
-      <div class="container text-center text-lg-left">
+      <div class="container text-center text-lg-left mt-5">
         <div class="row align-items-center">
-          <div class="col-lg-7">
-            <h2 class="divider-heading">Curious how Appton <br>works for large</h2>
+          <div class="col-lg-5">
+            <h2 class="divider-heading">Meet the team</h2>
             <div class="row">
               <div class="col-lg-10">
-                <p class="lead divider-subtitle mt-2 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing. Vitae animi mollitia cumque sunt soluta. consectetur adipisicing.</p>
+                <p class="lead divider-subtitle mt-2 text-muted">We're a bunch of professional nerds who like to make impact.</p>
               </div>
             </div><a href="#" class="btn btn-primary">Learn More</a>
           </div>
-          <div class="col-lg-5 mt-5 mt-lg-0"><img src="img/illustration-2.svg" alt="" class="divider-image img-fluid"></div>
+          <div class="col-lg-7 mt-5 mt-lg-0 mb-5"><iframe width="100%" height="360" src="https://www.youtube.com/embed/91LaV787QZs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </div>
       </div>
     </section>
