--- a/themes/appton/layouts/partials/services.html
+++ b/themes/appton/layouts/partials/services.html
@@ -1,28 +1,37 @@
-{{ if .Site.Data.services.enable }}
-<!-- Service Start -->
-<section id="service">
-  <div class="container">
-
-    <!-- Intro -->
-    <div class="row">
-      <div class="section-title mx-3">
-        <h2 class="mb-3">{{ .Site.Data.services.title }}</h2>
-        <p>{{ .Site.Data.services.subtitle }}</p>
-      </div>
-    </div>
-
-    <!-- Content -->
-    <div class="row justify-content-center">
-      {{ range .Site.Data.services.content }}
-      <div class="col-sm-6 col-md-4 px-3">
-        <div class="service-item">
-          <i class="{{ .icon }}"></i>
-          <h4>{{ .name }}</h4>
-          <p>{{ .text }}</p>
+    <section class="my-lg-5 bg-diagonal">
+      <div class="container">
+        <div class="text-center">
+          <h2 class="display-4">Services</h2>
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <p class="lead text-muted mt-2">We like to solve hard problems. Can you challenge us?</p>
+            </div>
+          </div>
+        </div>
+        <div class="integrations mt-3">
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="box text-center">
+                <div class="icon d-flex align-items-end"><img src="img/developer.svg" alt="..." class="img-fluid"></div>
+                <h3 class="h4">Cloud consultancy</h3>
+                <p class="font-weight-light">Get one of our experts to help your organisation.</p>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="box text-center">
+                <div class="icon d-flex align-items-end"><img src="img/brainstorming.svg" alt="..." class="img-fluid"></div>
+                <h3 class="h4">Productized services</h3>
+                <p class="font-weight-light">Kickstart your Cloud journey with one of our productized services.</p>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="box text-center">
+                <div class="icon d-flex align-items-end"><img src="img/training.svg" alt="..." class="img-fluid"></div>
+                <h3 class="h4">Workshops and training</h3>
+                <p class="font-weight-light">Become a Cloud expert, Kubernetes wizard or a DevOps guru.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      {{ end }}
-    </div>
-  </div>
-</section>
-{{ end }}
+    </section>
