--- a/themes/appton/layouts/_default/list.html
+++ b/themes/appton/layouts/_default/list.html
@@ -7,18 +7,31 @@
 
 	{{ partial "header.html" . }}
 
-	<section class="blog section">
+	<!-- Hero Section-->
+	<section class="hero">
+		<div class="container text-center">
+			<h1>{{ .Page.Title }}</h1>
+			<div class="row">
+			<div class="col-lg-8 mx-auto">
+				<p class="lead text-muted">{{ .Page.Description }}</p>
+			</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="blog">
 		<div class="container">
 			<div class="row">
 				{{ range (.Paginator 6).Pages }}
 				<div class="col-md-6">
 					<article class="blog-post">
             {{ with .Params.image }}<!--<img src="{{ . | absURL }}" class="img-thumbnail" alt="post-thumb"> -->{{ end }}
-						<a class="post-title" href="{{ .Permalink }}">{{ .Title }}</a>
+						<h3 class="post-title" href="{{ .Permalink }}">{{ .Title }}</h3>
+						<p class="italic" style="margin-top: 0;">By <span class="bold">{{ .Params.author }}</span> on <span class="bold">{{ .Site.Params.dateFormat | default "Jan 2, 2006" | .Date.Format }}</span></p>
 						<p>
-              {{ if .Params.summary }}{{ .Params.summary }}{{ else }}{{ .Summary }}{{ end }}
+              				{{ if .Params.summary }}{{ .Params.summary }}{{ else }}{{ .Summary }}{{ end }}
 						</p>
-						<a href="{{ .Permalink }}" class="btn btn-main">Read More</a>
+						<button type="button" href="{{ .Permalink }}" class="btn btn-primary">Read More</a>
 					</article>
 				</div>
 				{{ end }}
@@ -30,6 +43,9 @@
 	</section>
 
 	{{ partial "footer.html" . }}
+
+	<!-- JavaScript files-->
+	{{ partial "scripts.html" . }}
 
 </body>
 </html>
