--- a/themes/appton/layouts/partials/get-started.html
+++ b/themes/appton/layouts/partials/get-started.html
@@ -1,10 +1,10 @@
 
-    <section class="get-started">
+    <section class="my-lg-5 bg-diagonal">
       <div class="container text-center">
-        <h2>Get started today</h2>
+        <h2 class="display-4">Get in contact</h2>
         <div class="row">
           <div class="col-lg-8 m-auto">
-            <p class="lead text-muted mt-2">If you can make a list or send an email, you can use Appton. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <p class="lead text-muted mt-2">If you leave your e-mail address here, we will contact you as soon as possible.</p>
           </div>
         </div>
         <div class="row">
