--- a/themes/appton/layouts/partials/hero.html
+++ b/themes/appton/layouts/partials/hero.html
@@ -1,18 +1,17 @@
     <section class="hero">
-      <div><img src="/img/cloud-computing.svg" alt="..." class="hero-image img-fluid d-none d-lg-block position-absolute mt-5 mr-5" style="top: 100px; z-index: -1; right: 100px; width: 30%;"></div>
+      <div><img src="/img/cloud-computing.svg" alt="..." class="hero-image img-fluid d-none d-lg-block position-absolute mt-5 mr-3" style="top: 100px; z-index: -1; right: 100px; width: 30%;"></div>
       <div class="container mb-5">
         <div class="row align-items-center">
           <div class="col-lg-9">
-            <h1 class="hero-heading mb-1 text-yellow text-bold">Focus on<br/>your business</h1>
-            <h2 class="ml-5 text-muted">and let the <b>cloud</b> take care of your IT.</h2>
+            <h1 class="hero-heading mb-1 text-yellow text-bold">Do cloud or do not. There is no try.</h1>
             <div class="row">
-              <div class="col-lg-10 mt-5">
-                <p class="lead text-muted mt-4 mb-4">Things work differently in the Cloud. We help you making the right choices and deliver business value faster.</p>
+              <div class="col-lg-10 mt-2">
+                <p class="lead text-muted mt-1 mb-4">Things work differently in the cloud. We know how. We help you make the right choices and deliver business value faster by offering consultancy, training and support.</p>
               </div>
             </div>
             <div class="row">
               <div class="col">
-                <button type="submit" class="btn btn-warning rounded-pill text-uppercase mr-4">Learn how</button>
+                <button type="submit" class="btn btn-warning rounded-pill text-uppercase mr-lg-4">Learn how</button>
                 <button type="submit" class="btn btn-outline-primary rounded-pill text-uppercase">Get in contact</button>
                 </div>
             </div>
