--- a/themes/appton/layouts/partials/meet-the-team.html
+++ b/themes/appton/layouts/partials/meet-the-team.html
@@ -1,16 +1,18 @@
 
-    <section>
+    <section class="mt-lg-5">
       <div class="container text-center text-lg-left mt-5">
         <div class="row align-items-center">
           <div class="col-lg-5">
-            <h2 class="divider-heading">Meet the team</h2>
+            <h2 class="display-4">Meet the team</h2>
             <div class="row">
               <div class="col-lg-10">
                 <p class="lead divider-subtitle mt-2 text-muted">We're a bunch of professional nerds who like to make impact.</p>
               </div>
             </div><a href="#" class="btn btn-primary">Learn More</a>
           </div>
-          <div class="col-lg-7 mt-5 mt-lg-0 mb-5"><iframe width="100%" height="360" src="https://www.youtube.com/embed/91LaV787QZs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+          <div class="col-lg-7 mt-5 mt-lg-0 mb-2 embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/Kila1FvQPXw?rel=0&amp;controls=0&amp;showinfo=0&amp;modestbranding=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         </div>
       </div>
     </section>
