--- a/themes/appton/layouts/partials/portfolio.html
+++ b/themes/appton/layouts/partials/portfolio.html
@@ -1,9 +1,9 @@
 
-    <section class="pb-0">
+    <section class="my-lg-5">
       <div class="container">
         <div class="text-center">
-          <h2>Portfolio</h2>
-          <p class="lead text-muted mt-2">You can make also a portfolio or image gallery.</p>
+          <h2 class="display-4">Portfolio</h2>
+          <p class="lead text-muted mt-2">Learn more about our projects.</p>
         </div>
         <div class="portfolio mt-5">
           <div class="row">
