--- a/themes/appton/layouts/_default/single.html
+++ b/themes/appton/layouts/_default/single.html
@@ -8,7 +8,7 @@
 	{{ partial "header.html" . }}
 
 	<!-- Hero Section-->
-	<section class="hero bg-diagonal">
+	<div class="hero bg-diagonal">
 		<div class="container">
 			<h1>{{ .Page.Title }}</h1>
 			<div class="post-info-wrapper">
@@ -16,14 +16,11 @@
 					</div>
 			<hr />
 		</div>
-	</section>
-
-		
-    
+	</div>
 
 	<div class="post">
 	  <!-- Wrapper Start -->
-	  <section style="border: 1px dotted #ddd;">
+	  <section>
 	    <div class="container">
             
 	      <div class="row">
@@ -37,17 +34,15 @@
 	            <p>{{ .Content }}</p>
 	          </div>
             {{ end }}
-	      </div>
+		  </div>
+		  <p class="center-text" style="padding: 30px;">
+				<a class="btn btn-main" href="{{ $.Site.BaseURL }}/blog">Back to blog</a>
+			  </p>
 	    </div>
 	  </section>
-	</div>
-	<p class="center-text" style="padding: 30px;">
-	  <a class="btn btn-main" href="{{ $.Site.BaseURL }}/blog">Back to blog</a>
-	</p>
 
-	{{ if and (isset .Site.Params "call") (.Site.Params.call.enable) }}
-		{{ partial "call-to-action.html" . }}
-	{{ end }}
+	</div>
+
 
 	{{ partial "footer.html" . }}
      <!-- JavaScript files-->
