--- a/themes/appton/layouts/partials/hero.html
+++ b/themes/appton/layouts/partials/hero.html
@@ -6,12 +6,12 @@
             <h1 class="hero-heading mb-1 text-yellow text-bold">Do cloud or do not. There is no try.</h1>
             <div class="row">
               <div class="col-lg-10 mt-2">
-                <p class="lead text-muted mt-1 mb-4">Things work differently in the cloud. We know how. We help you make the right choices and deliver business value faster by offering consultancy, training and support.</p>
+                <p class="lead text-muted mt-1 mb-4">Things work differently in the cloud. We know how. We're a boutique consulting firm focused on cloud technology, and we can help you make the right choices and deliver business value faster.</p>
               </div>
             </div>
             <div class="row">
               <div class="col">
-                <button type="submit" class="btn btn-warning rounded-pill text-uppercase mr-lg-4">Learn how</button>
+                <button type="submit" class="btn btn-warning rounded-pill text-uppercase mr-lg-4 mr-md-2">Learn how</button>
                 <button type="submit" class="btn btn-outline-primary rounded-pill text-uppercase">Get in contact</button>
                 </div>
             </div>
